tree-sitter-c4script/test/corpus/strings.txt
===
String
===

local s = "Hi";

---

(source_file
    (var_definition (var_scope) (var_assignment (identifier) (string))))

===
String
===

local s = "Hi \"Twonky\"";

---

(source_file
    (var_definition (var_scope) (var_assignment (identifier) (string))))


===
Multiple strings in a single line
===

local s1 = "Hi", s2 = "Cya";

---

(source_file
    (var_definition
        (var_scope)
        (var_assignment (identifier) (string))
        (var_assignment (identifier) (string))))
