tree-sitter-c4script/test/corpus/while_loop.txt
===
While-loop
===

func Fn() {
    while (true) return(1);
}

---

(source_file 
    (function_definition
        (identifier)
        (parameter_list)
        (block 
            (while_statement (bool)
            (return_statement (number))))))
===
While-loop with block
===

func Fn() {
    while (true) {
        break;
    }
}

---

(source_file 
    (function_definition
        (identifier)
        (parameter_list)
        (block 
            (while_statement (bool)
            (block (flow_control_statement))))))
